build: change dist structure

--- a/cdn-playground/index.html
+++ b/cdn-playground/index.html
@@ -12,35 +12,35 @@
     </div>
 
     <!-- ######vue2.6 -->
-    <script src="./lib/vue/2.6/vue@2.6.14.js"></script>
+    <!-- <script src="./lib/vue/2.6/vue@2.6.14.js"></script>
     <script src="./lib/vue/2.6/composition-api@1.7.1.prod.js"></script>
     <script src="./lib/dist/index_v2.js"></script>
     <script>
       // --------------vue2
-      Vue.use(__VUE_UNI_COMP__.default);
+      Vue.use(__VUE_UNI_COMP__);
       new Vue({
         el: "#app",
       });
-    </script>
+    </script> -->
 
     <!-- #####vue2.7 -->
     <!-- <script src="./lib/vue/2.7/vue@2.7.14.js"></script>
-    <script src="./lib/index_v2.7.js"></script>
+    <script src="./lib/dist/index_v2.7.js"></script>
     <script>
-      Vue.use(__VUE_UNI_COMP__.default);
+      Vue.use(__VUE_UNI_COMP__);
       new Vue({
         el: "#app",
       });
     </script> -->
 
     <!-- #####vue3 -->
-    <!-- <script src="./lib/vue/3/vue@3.2.47.global.js"></script>
+    <script src="./lib/vue/3/vue@3.2.47.global.js"></script>
     <script src="./lib/dist/index_v3.js"></script>
     <script>
       const App = {};
       const app = Vue.createApp(App);
-      app.use(__VUE_UNI_COMP__.default);
+      app.use(__VUE_UNI_COMP__);
       app.mount("#app");
-    </script> -->
+    </script>
   </body>
 </html>
