--- a/cdn-playground/index.html
+++ b/cdn-playground/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>cdn test page</title>
-    <link rel="stylesheet" href="./lib/dist/index_v2.css">
-    <!-- <link rel="stylesheet" href="./lib/dist/index_v2.7.css">
-    <link rel="stylesheet" href="./lib/dist/index_v3.css"> -->
+    <link rel="stylesheet" href="./lib/dist/style.css">
   </head>
   <body>
     <!-- ######component area -->
