feat(component): add UniIcon

--- a/cdn-playground/index.html
+++ b/cdn-playground/index.html
@@ -10,6 +10,8 @@
     <!-- ######component area -->
     <div id="app">
       <uni-template></uni-template>
+      <uni-icon icon="github" ></uni-icon>
+      <uni-icon icon="close" type="danger" ></uni-icon>
     </div>
 
     <!-- ######vue2.6 -->
